--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
                                 <li><a href="#overview-section" class="nav-link">Overview</a></li>
                                 <li><a href="#plan-section" class="nav-link">Plans</a></li>
                                 <li><a href="#club-section" class="nav-link">Clubhouse</a></li>
-
+                                <li><a href="#Spec-section" class="nav-link">Specifications</a></li>
+                                <li><a href="#location-section" class="nav-link">Location</a></li>
                                 <li><a href="#contact-section" class="nav-link">Contact</a></li>
                             </ul>
                         </nav>
@@ -283,8 +284,6 @@
             <div class="container">
                 <div class="site-insp-inner">
                     <div class="row align-items-center">
-
-
                         <div class="col-sm-8">
                             <div class="evolve-nature-img">
                                 <img src="images/nature-insp.jpg" alt="">
@@ -305,7 +304,7 @@
                         </div>
                     </div>
                     <hr>
-                    <div class="row align-items-center">
+                    <div class="row align-items-center site-mobile">
                         <div class="col-sm-4">
                             <div class="evolve-nature-con">
                                 <h3>
@@ -349,7 +348,7 @@
                         </div>
                     </div>
                     <hr>
-                    <div class="row align-items-center">
+                    <div class="row align-items-center site-mobile">
                         <div class="col-sm-4">
                             <div class="evolve-nature-con">
                                 <h3>
@@ -465,7 +464,7 @@
         </section>
 
         <hr>
-        <div class="site-section bg-light pt-5" id="specification">
+        <div class="site-section bg-light pt-5" id="Spec-section">
             <div class="container">
                 <div class="row mb-5 align-items-center">
                     <div class="col-md-12 text-center">
@@ -697,7 +696,7 @@
 
         <hr>
 
-        <section class="location-map">
+        <section class="location-map" id="location-section">
             <div class="container">
                 <div class="row text-center">
                     <div class="col-lg-12">
@@ -726,82 +725,134 @@
 
                             </p>
                         </div>
+                  
+                        <h6>
+                            Proximity
+                        </h6>
+                        <div class="row">
+                            <div class="col-sm-6 mb-10">
+                                <div class="proxy-img ">
+                                    <img src="images/location/locationimages-24.jpg" alt="" class="img-fluid">
+                                    <h5>
+                                        Flipkart India Pvt. Ltd,
+                                    </h5>
+                                </div>
+                            </div>
+                            <div class="col-sm-6 mb-10">
+                                <div class="proxy-img">
+                                    <img src="images/location/locationimages-25.jpg" alt="" class="img-fluid">
+                                    <h5>
+                                        Malla Reddy University
+                                    </h5>
+                                </div>
+                            </div>
+                            <div class="col-sm-6 mb-10">
+                                <div class="proxy-img">
+                                    <img src="images/location/locationimages-26.jpg" alt="" class="img-fluid">
+                                    <h5>
+                                        Hyderabad Institute of Technology
+                                    </h5>
+                                </div>
+                            </div>
+                            <div class="col-sm-6 mb-10">
+                                <div class="proxy-img">
+                                    <img src="images/location/locationimages-27.jpg" alt="" class="img-fluid">
+                                    <h5>
+                                        Oakridge Intl. School
+                                    </h5>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </section>
 
-         <footer id="footer" class="footer bg-overlay">
-        <div class="footer-main">
+        <div class="site-brochure">
             <div class="container">
-                <div class="row justify-content-between">
-                    <div class="col-lg-4 col-md-6 footer-widget footer-about">
-                        <h3 class="widget-title">About Us</h3>
-                        <img loading="lazy" class="footer-logo" src="images/Evolve logo-05.png" alt="Constra">
-                        <!-- <p class="text-white">
-                            The management team has wide range of experience with more than two decades of service
-                            excellence at the helm in a variety of domains. They bring unique strengths that make
-                            CADOL a rapidly upcoming real estate developer in Hyderabad.
-                        </p> -->
-                        <div class="footer-social">
-                            <ul>
-                                <li><a href="https://www.facebook.com/cadolgroup/" aria-label="Facebook"><i
-                                            class="fab fa-facebook-f"></i></a></li>
-                                <li><a href="https://twitter.com/cadolgroup" aria-label="Twitter"><i
-                                            class="fab fa-twitter"></i></a>
-                                </li>
-                                <li><a href="https://www.instagram.com/cadolgroup/" aria-label="Instagram"><i
-                                            class="fab fa-instagram"></i></a></li>
-
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="col-lg-6 col-md-6 mt-5 mt-lg-0 footer-widget">
-                        <h3 class="widget-title">Get In Touch</h3>
-                        <ol class="list-arrow ">
-                            <li>
-
-                                <div class="right-add">
-                                    <p class="text-white mb-0">
-                                        Visit Office:
-                                    </p>
-                                    <span>
-                                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat, vel!
-                                    </span>
-                                </div>
-                            </li>
-                            <br>
-                            <li>
-                                <div class="right-add">
-                                    <p class="text-white mb-0">
-                                        Phone:
-                                    </p>
-                                    <span>
-                                        +91 0000000000
-                                    </span>
-                                </div>
-                            </li>
-                            <br>
-                            <li>
-                                <div class="right-add">
-                                    <p class="text-white mb-0">
-                                        Email:
-                                    </p>
-                                    <span>
-                                        info@.com
-                                    </span>
-                                </div>
-                            </li>
-                        </ol>
+                <div class="row">
+                    <div class="col-sm-6">
+                        <h4>
+                            Download Evovle Brochure
+                        </h4>
                     </div>
 
+                    <div class="col-sm-6">
+                        <a href="images/Anirudh Evolve Brochure.pdf"  class="btn btn-download">
+                            Download
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
 
+        <footer id="contact-section" class="footer bg-overlay">
+            <div class="footer-main">
+                <div class="container">
+                    <div class="row justify-content-between">
+                        <div class="col-lg-4 col-md-6 footer-widget footer-about">
+                            <h3 class="widget-title">About Us</h3>
+                            <img loading="lazy" class="footer-logo" src="images/Evolve logo-05.png" alt="Constra">
 
-    </footer> 
-    
+                            <div class="footer-social">
+                                <ul>
+                                    <li><a href="https://www.facebook.com/cadolgroup/" aria-label="Facebook"><i
+                                                class="fab fa-facebook-f"></i></a></li>
+                                    <li><a href="https://twitter.com/cadolgroup" aria-label="Twitter"><i
+                                                class="fab fa-twitter"></i></a>
+                                    </li>
+                                    <li><a href="https://www.instagram.com/cadolgroup/" aria-label="Instagram"><i
+                                                class="fab fa-instagram"></i></a></li>
+
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="col-lg-6 col-md-6 mt-5 mt-lg-0 footer-widget">
+                            <h3 class="widget-title">Get In Touch</h3>
+                            <ol class="list-arrow ">
+                                <li>
+
+                                    <div class="right-add">
+                                        <p class="text-white mb-0">
+                                            Visit Office:
+                                        </p>
+                                        <span>
+                                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat, vel!
+                                        </span>
+                                    </div>
+                                </li>
+                                <br>
+                                <li>
+                                    <div class="right-add">
+                                        <p class="text-white mb-0">
+                                            Phone:
+                                        </p>
+                                        <span>
+                                            +91 0000000000
+                                        </span>
+                                    </div>
+                                </li>
+                                <br>
+                                <li>
+                                    <div class="right-add">
+                                        <p class="text-white mb-0">
+                                            Email:
+                                        </p>
+                                        <span>
+                                            info@.com
+                                        </span>
+                                    </div>
+                                </li>
+                            </ol>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+
+
+        </footer>
+
 
 
 
